...
};

const ThemeThumbnail = ({ theme }: { theme: ThemeOption }) => {
  const { colors: Colors } = useAppTheme();
  const styles = React.useMemo(() => createStyles(Colors), [Colors]);

  if (theme === "Light") {
    return (
      <View style={[styles.thumbnailBase, { backgroundColor: "#F3F4F6" }]}>
        <View style={styles.thumbnailLightContent}>
          <Text style={{ fontSize: 10, fontWeight: "bold", color: "#111827" }}>
            Aa
          </Text>
        </View>
      </View>
    );
  }
  if (theme === "Dark") {
    return (
      <View style={[styles.thumbnailBase, { backgroundColor: "#1F2937" }]}>
        <View style={styles.thumbnailDarkContent}>
          <Text style={{ fontSize: 10, fontWeight: "bold", color: "#FFFFFF" }}>
            Aa
          </Text>
...
