...
              <View style={styles.warningIconContainer}>
                <MaterialCommunityIcons name="alert-circle" size={24} color="#FBBF24" />
              </View>
            </View>

            <View style={styles.inputGroup}>
              <Text style={[Typography.body, styles.label]}>Current password</Text>
              <View style={styles.inputContainer}>
                <TextInput
                  underlineColorAndroid="transparent"
                  style={styles.input}
                  value={currentPassword}
                  onChangeText={setCurrentPassword}
...
                  <Feather name={showCurrentPassword ? "eye-off" : "eye"} size={20} color={Colors.textSecondary} />
                </TouchableOpacity>
              </View>
            </View>

            <View style={styles.inputGroup}>
              <Text style={[Typography.body, styles.label]}>New password</Text>
              <View style={styles.inputContainer}>
                <TextInput
                  underlineColorAndroid="transparent"
                  style={styles.input}
                  value={newPassword}
                  onChangeText={setNewPassword}
...
