...
          </View>
        </View>
      </ScrollView>

      <View style={styles.footer}>
        <Button 
          title="Log out" 
          onPress={handleLogout}
          backgroundColor={Colors.primary}
          textColor={Colors.secondary}
          borderRadius={24}
          loading={isLoading}
          disabled={isLoading}
...
